docs/데이터파트/version3.3/데이터_품질_규약.md
# 데이터 품질 규약 — 이상치 · 결측 · 자본변동 · 편향

> 작성 2026-09-04 · 이동원 · **전량 실측 + 수업 자료 + 외부 관행 조사**
> 대상: 팀원 4인. 특히 피처(신장환)·모델(오준영)·백테스팅(강민석) 파트가 **무엇을 믿고
> 무엇을 의심해야 하는지** 알기 위한 문서입니다.

---

## 0. 한 줄

**우리 자료는 결측이 거의 없고 편향도 없지만, 수정주가가 감자 17자리를 못 이었습니다.**
그 17자리는 지금 유니버스에 안 들지만, 유니버스를 239위까지 넓히거나 전 종목으로
피처를 만들면 걸립니다.

---

## 1. 이 문서를 쓰게 된 이유 — 오늘 두 번 틀렸습니다

| 무엇 | 적어 둔 값 | 전량 실측 | 왜 틀렸나 |
|---|---:|---:|---|
| 이름으로 우선주를 추측할 때 어긋나는 종목 | 7종 | **10종 · 10,190행** | 세 날짜만 봤다 |
| 수정주가가 못 이은 자리 | 0 (v9 완료 보고) | **17자리** | 액면가가 바뀐 것만 봤다 |

두 실수의 모양이 같습니다. **한 축을 전량으로 봐도 다른 축이 표본이면 그건 여전히
표본입니다.** 20260831 유가 943종을 전수로 세도 우선주 어긋남은 0건이었습니다.
날짜를 안 넓혔기 때문입니다.

---

## 2. 수업이 말한 것 — 09단원 1장 · 02단원 4장

강사님 자료가 금융 데이터의 함정을 **세 가지**로 듭니다
(`learning/09-finance-ml-dl/1.금융머신러닝.ipynb`).

### 2.1 룩어헤드 편향 (Look-ahead Bias)

> 백테스팅할 때 그 시점에서는 알 수 없었던 미래 정보를 활용해서 성과가 비현실적으로
> 좋게 나오는 오류
>
> - 1분기 실적(3월 31일까지)을 4월 1일부터 반영 → 실제 발표는 4~5월
> - **당일 종가로 당일 매매** → 종가는 장 마감 후 확정되므로 **다음 거래일**에 매매

### 2.2 생존 편향 (Survivorship Bias)

> 상장폐지·인수합병으로 사라진 회사를 **포함해서** 테스트해야 한다.
> 2015년 코스피 종목으로 테스트해야 하는데 지금 남아 있는 종목만 쓰면 그 사이
> 상장폐지된 부실기업이 전부 빠져 결과가 부풀려진다.

### 2.3 통화 기준

원화·달러 기준을 섞지 않는다. 환율에도 룩어헤드·정상성 문제가 있다.

### 2.4 결측치 — 시계열 특성을 고려한 보간

> 시계열 데이터의 추세·계절성을 반영한 보간법 고려 (예: ARIMA 기반)

일반 전처리(`02-preprocessing/4`)는 `dropna` · `fillna` · `replace` 로 결측을 다루고,
**NaN 이 아닌 `0`·`"-"`·`"?"` 로 들어온 결측**을 `np.nan` 으로 바꾸라고 합니다.

### 2.5 🔴 수업에 **없는** 것 — 이상치 처리

`2.금융데이터전처리.ipynb` 는 결측을 `isnull().sum()` 으로 세는 데서 멈춥니다.
윈저화·트리밍·MAD 같은 이상치 처리가 나오지 않습니다. **그래서 §4 를 외부 관행으로
채웠습니다.**

---

## 3. 우리 자료 실측 — 무엇을 지키고 있나

`daily_price` 9,223,644행 전수 (2026-09-04).

| 수업이 말한 것 | 우리 실측 | 판정 |
|---|---|---|
| 생존 편향을 피한다 | 전 구간 3,677종 중 **912종(24.8%)이 지금은 없는 종목** | ✅ 남아 있다 |
| 종가는 다음 거래일에 쓴다 | `stock_base_info`·`stock_identity`·`corp_profile`·`macro_series` 에 `known_at` | ✅ |
| 결측을 정직하게 다룬다 | 원가격 4칸 결측 **0** · `adj_open/high/low` 결측 3.08% | ✅ (아래 §5) |
| OHLC 정합 | `high<low` 등 위반 **0행** (수정주가 포함) | ✅ |

### 3.1 🔴 `daily_price` 에는 시점 칸이 없습니다

`known_at` 이 있는 표는 넷이고 시세 표에는 없습니다. 이건 **결함이 아니라 설계**입니다 —
시세의 시점 규칙은 *"그날 종가는 그날 장 마감 뒤"* 하나뿐이라 행마다 적을 것이 없습니다.
대신 그 규칙은 **`supply/` 층의 정문 함수가 강제**합니다.

다만 **`supply/` 를 거치지 않고 `daily_price` 를 직접 읽으면 아무것도 막아 주지
않습니다.** 팀원이 SQL 로 바로 읽을 때는 스스로 `bas_dd < 예측일` 을 지켜야 합니다.

---

## 4. 이상치 — 수업에 없어서 외부 관행으로 채웁니다

### 4.1 조사한 것

| 방법 | 흔한 임계값 | 어디서 쓰나 |
|---|---|---|
| 윈저화 (winsorize) | **5/95 백분위** (펀더멘털) · 1/99 (연구) | MSCI Quality 지수 방법론 · 팩터 구성 |
| MAD 수정 z-점수 | `0.6745·(x−중앙값)/MAD`, **\|z\|>3** | 두꺼운 꼬리에 강건 |
| 3-시그마 절단 | ±3σ | Barra USE4 — **자료 오류 제거** 단계 |
| 순위화 (rank) | — | 횡단면 팩터 구성의 기본 |

출처: MSCI Quality Index Methodology · Barra USE4 Methodology Notes(2011) ·
scipy `mstats.winsorize` · zipline `pipeline.factors` · Lopez de Prado,
*Advances in Financial Machine Learning*.

### 4.2 🔴 그런데 우리는 가격을 자르지 않습니다

윈저화는 **횡단면 팩터**에 씁니다 — 같은 날 여러 종목의 값을 나란히 놓고 꼬리를
자르는 것입니다. 우리 `daily_price` 는 **원자료**라 자르면 안 됩니다. 이유 셋:

1. **잘린 값은 되돌릴 수 없습니다.** 원자료를 고치면 나중에 "진짜였다"는 것을 알아도
   복원할 방법이 없습니다.
2. **극단이 대부분 진짜입니다.** 아래 §4.3 이 그 증거입니다.
3. **자르면 결함이 숨습니다.** 감자 미조정 17자리는 극단이라서 눈에 띄었습니다.
   미리 잘라 두었다면 영영 못 찾았을 것입니다.

**그래서 우리 규약은 이렇습니다.**

| 층 | 이상치를 어떻게 하나 |
|---|---|
| 수집 (`ingest/`) | **아무것도 자르지 않는다.** 받은 그대로 담는다 |
| 검사 (`scripts/verify_*`) | 극단을 **세고 원인으로 가른다.** 설명 안 되면 붉게 띄운다 |
| 공급 (`supply/`) | 설명 안 되는 날에 **표시(flag)를 붙여** 내보낸다 |
| 피처 (`features/`) | 여기서 자른다 — **수익률·피처 단계**, 횡단면 윈저화 |

### 4.3 실측 — 극단은 대부분 진짜입니다

수정주가 기준 하루 변화가 ±100% 를 넘는 **96행**을 독립 근거로 갈랐습니다.

| 원인 | 행 수 | 근거 |
|---|---:|---|
| 자본변동 | 44 | 그날 `list_shrs` 가 바뀌었다 |
| 거래정지 재개 | 20 | 직전 행 거래량 0 |
| 종목의 첫 행 | 0 | 첫 행에는 극단이 없다 (수집 경계는 상장이 아니다) |
| 🔴 아직 설명 안 됨 | **32** | 대부분 거래량 수천만 주 — 정지 구간이 행 없이 빠진 것으로 보인다 |

`common/corporate_actions.py` 가 **원가격** 기준 2,080행을 넷으로 남김없이 설명한 적이
있습니다. 위 32행은 그 분류기를 수정주가 축에 다시 붙이면 대부분 닫힐 것으로 봅니다.

---

## 5. 결측 — 0 과 NaN 은 다릅니다

### 5.1 실측

| 칸 | 결측 | 0 인 행 | 뜻 |
|---|---:|---:|---|
| `open`·`high`·`low` | 0 | **284,107 (3.08%)** | 체결이 없던 날 (거래정지) |
| `close` | 0 | 0 | 정지 중에도 잔존종가가 있다 |
| `volume` | 0 | 283,982 (3.08%) | 거래 없음 |
| `adj_open`·`adj_high`·`adj_low` | **284,107 (3.08%)** | — | 원가격이 0 이라 배율을 못 곱한다 |
| `adj_close` | 0 | 0 | — |

**같은 3.08% 가 원가격에서는 `0`, 수정주가에서는 `NaN` 입니다.** 이건 의도된 것입니다 —
`0` 은 KRX 가 준 그대로이고, `NaN` 은 *"이 날은 값이 없다"* 를 우리가 밝힌 것입니다.

### 5.2 🔴 팀원이 지켜야 할 것

```python
# 이러면 안 됩니다 — "그 날 0원" 이 됩니다
df["adj_open"].fillna(0)

# NaN 은 참입니다. 빈 값 판정은 pd.isna 로
if pd.isna(x): ...           # ✅
if not x: ...                # ❌ NaN 은 False 가 아닙니다
```

앞으로 채우기(forward-fill)를 쓸 거라면 **거래정지·상장폐지를 넘어 채우지 않도록**
`limit` 을 두어야 합니다. 정지 구간을 직전 가격으로 메우면 그 기간 변동성이 0 이 되고,
정지가 풀린 날 점프가 통째로 하루에 몰립니다.

> 신장환님이 `features/indicators.py` 의 RSI 결측 델타를 **`nan` 으로 정직하게 전파**하도록
> 고치셨습니다(PR #81). 그 방향이 이 규약과 같습니다.

---

## 6. 🔴 자본변동 — FinanceDataReader 가 감자를 조정하지 않습니다

### 6.1 실측

상장주식수가 **2배 이상** 변한 자리 2,048곳을 전수로 봤습니다.

| 갈래 | 자리 |
|---|---:|
| 가격이 안 튀었다 — 증자·전환 등이라 조정이 필요 없다 | 984 |
| 가격이 튀었고 수정주가가 이었다 | 1,047 |
| 🔴 **가격이 튀었는데 수정주가가 못 이었다** | **17** |

못 이은 17자리는 보통주 13 · 우선주 4 이고, **개발구간 안이 11**입니다.
- 출처는 **전부 `fdr`** — 우리 계산(`chain`)이 아니라 FinanceDataReader 가 준 값입니다

| 종목 | 날짜 | 주식수 | adj 가 뛴 배수 |
|---|---|---|---:|
| 017170 훈영 | 20110404 | 53,406,538 → 2,670,326 | **20.00배** |
| 078860 아이오케이 | 20231227 | 96,126,472 → 4,806,323 | 19.71배 |
| 007460 에이프로젠 | 20260508 | 329,305,030 → 21,953,668 | 15.46배 |
| 139050 시티랩스 | 20230628 | 106,494,006 → 7,862,472 | 15.42배 |
| 079970 투비소프트 | 20240821 | 92,905,003 → 9,290,500 | 8.39배 |

(전체 17건은 `python scripts/verify_base_info.py` 가 매번 찍습니다.)

### 6.2 왜 놓쳤나 — 액면가로 판정했기 때문입니다

**액면분할·병합은 액면가가 같이 바뀝니다.** 10:1 병합이면 액면가 500원 → 5,000원.
그래서 액면가를 대조하면 잡힙니다.

**그런데 감자는 액면가가 그대로입니다.** 주식수만 줄고 액면가는 유지됩니다.
실제 기사도 그렇게 씁니다 — *"보통주 10주를 **동일 액면가**의 1주로 병합하는 무상감자"*
(케이피엠테크, 2026-08). 우리가 찾은 042040 케이피엠테크 20260626 건과 같은 사건입니다.

처음 만든 검사는 이 축을 안 봤습니다. 219건이 전부 "설명 안 됨"으로 쏟아졌고
그 안에 진짜 결함이 묻혔습니다.

### 6.3 FDR 의 공식 입장과 실측이 다릅니다

> *"FinanceDataReader 에서 가져오는 모든 가격 데이터는 수정 주가(Adjusted Price)입니다.
> 따라서 종가(Close) 역시 수정종가(Adjusted Close) 입니다."*
> — FinanceDataReader Issue #21

**이 문장을 그대로 믿으면 안 됩니다.** 우리 실측에서 17자리가 원가격과 똑같이 뛰었습니다.
라이브러리 문서를 근거로 삼지 말고 **자기 자료로 재야 합니다.**

### 6.4 🔴 이 문제는 앞으로 커집니다

| 무엇 | 수치 | 출처 |
|---|---:|---|
| 2026년 액면병합 | **276건** | KRX 집계 (2026-08-26) |
| 2026-02 상장폐지 개혁 이후 7월 중순까지 주식병합 | **256건** | 작년 같은 기간 **10건**의 20배 |
| 병합 이후 주가가 오히려 내린 기업 비율 | 83% | 같은 집계 |

주가 1,000원 미만이 30거래일 이어지면 관리종목이 되는 제도가 2026-07 시행됐고,
동전주들이 병합·감자로 대응하고 있습니다. **최근 구간일수록 미조정 위험이 큽니다.**

### 6.5 지금 영향 범위

| 물음 | 답 |
|---|---|
| 유니버스(시장별 시총 상위 50)에 드나 | **0건** |
| 보통주 중 가장 높은 순위 | 176440 에이치엔티 **239위** (KOSDAQ) |
| 언제부터 걸리나 | 유니버스를 **상위 239위**까지 넓히면 |
| 전 종목으로 피처를 만들면 | **지금도 걸립니다** |

---

## 7. 앞으로 지킬 것 — 규약 셋

### 7.1 반출 전에 검증기를 전수로 돌린다

HF 업로드 스크립트가 `verify_*` 를 먼저 돌리고, **하나라도 붉으면 올리지 않습니다.**
"고쳤다"와 "나갔다"는 다릅니다 — 2026-09-03 에 이미 한 번 겪었습니다.

### 7.2 알면서 미룬 것을 한 장에 모은다

이 문서 §8 이 그 자리입니다. HF 데이터셋 카드에도 같은 절을 넣어, 팀원이 저장소를
안 봐도 결함을 알 수 있게 합니다.

### 7.3 축이 둘이면 표본도 둘로 넓힌다

검사를 쓸 때마다 **"이 검사가 안 보는 축은 무엇인가"** 를 주석으로 적습니다.
오늘 두 번 다 그 질문을 안 해서 틀렸습니다.

---

## 8. 알면서 아직 못 고친 것

| 무엇 | 크기 | 영향 | 언제 |
|---|---|---|---|
| 🔴 감자 미조정 | 17자리 (개발구간 11) | 유니버스 밖 · 전 종목 피처면 걸림 | 다음 |
| 극단 중 설명 안 된 것 | 32행 | `corporate_actions` 를 수정주가 축에 붙이면 대부분 닫힘 | 다음 |
| 중기·장기 피처 | 통째로 없음 | 주간·월간 수익률(수업 §전처리 기법)이 빠져 있다 | 미정 |
| 업종 스냅샷 KOSDAQ | 0장 | KOSPI 18장만 있다 | 선택 |
| `ta` 라이브러리 | 미설치 | 벤치마킹이 "정답지로 쓴다"고 정했으나 안 깔렸다 | 검토 |

---

## 9. 참고

**수업 자료**
- `learning/09-finance-ml-dl/1.금융머신러닝.ipynb` — 편향 3종 · 시계열 4성질 · 전처리 기법
- `learning/02-preprocessing/4. 판다스_데이터전처리.ipynb` — 결측·중복·표준화·정규화

**외부**
- MSCI Quality Index Methodology — 윈저화 5/95
- Barra USE4 Methodology Notes (2011) — 3σ 절단을 자료 오류 제거에
- Lopez de Prado, *Advances in Financial Machine Learning*
- scipy `stats.mstats.winsorize` · zipline `pipeline.factors`
- FinanceDataReader Issue #21 — "모든 가격이 수정주가" (우리 실측과 다름)
- 녹색경제신문 2026-08-27 — 액면병합 276건 · 병합 후 83% 하락

**우리 코드**
- `scripts/verify_base_info.py` — 9절이 자본변동 연속성을 본다
- `common/corporate_actions.py` — 원가격 극단 2,080행을 넷으로 가른 분류기
- `features/indicators.py` — RSI 결측을 `nan` 으로 전파 (PR #81 · 신장환)
